// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TDPPoolTable renders data filled state 1`] = `
<DocumentFragment>
  .c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c19 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c28 {
  height: 16px;
  width: 16px;
}

.c28 path {
  stroke: #FC72FF;
  background: #7D7D7D;
  fill: none;
}

.c29 {
  -webkit-animation: 2s fvtopB linear infinite;
  animation: 2s fvtopB linear infinite;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c9 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c23 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c1 {
  max-width: 1200px;
  max-height: 600px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px auto 24px auto;
}

.c2 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background: #FFFFFF;
}

.c16 {
  width: 100%;
  position: relative;
  overflow-x: auto;
  overscroll-behavior-x: none;
  border-right: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-left: 1px solid #22222212;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c16::-webkit-scrollbar {
  display: none;
}

.c26 {
  position: -webkit-sticky;
  position: sticky;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: -48px;
  visibility: hidden;
}

.c27 {
  background: #FFEFFF;
  border-radius: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 8px;
  color: #FC72FF;
  font-size: 16px;
  font-weight: 535;
  gap: 8px;
  height: 34px;
  z-index: 990;
}

.c5 {
  padding: 0px 12px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 64px;
}

.c18:hover {
  background: #22222212;
}

.c6 {
  border: 1px solid #22222212;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  overflow: auto;
  width: unset;
  min-height: 52px;
  background: #F9F9F9;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  overscroll-behavior: none;
}

.c6::-webkit-scrollbar {
  display: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7:last-child {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7:first-child {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c17 {
  color: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c12 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  width: 100%;
  gap: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c12:hover {
  opacity: 0.6;
}

.c12:active {
  opacity: 0.4;
}

.c13 {
  height: 16px;
  width: 16px;
  color: #222222;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c14 {
  color: #222222;
}

.c8 {
  min-width: 44px;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c10 {
  width: 240px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c11 {
  min-width: 120px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c15 {
  min-width: 100px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c24 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c20 {
  position: relative;
  top: 0;
  left: 0;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c21 img {
  width: 14px;
  height: 28px;
  object-fit: cover;
}

.c21 img:first-child {
  border-radius: 14px 0 0 14px;
  object-position: 0 0;
}

.c21 img:last-child {
  border-radius: 0 14px 14px 0;
  object-position: 100% 0;
}

.c22 {
  width: 14px;
  height: 28px;
  border-radius: 50%;
}

.c25 {
  padding: 2px 6px;
  background: #F9F9F9;
  border-radius: 5px;
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        data-testid="tdp-pools-table-0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
      >
        <div>
          <div
            class="c0 c1"
          >
            <div
              class="c2"
            >
              <div
                class="c3 c4 c5 c6"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c9 css-1urox24"
                    >
                      #
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c9 css-1urox24"
                    >
                      Pool
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <svg
                        class="c13"
                        direction="desc"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="5"
                          y2="19"
                        />
                        <polyline
                          points="19 12 12 19 5 12"
                        />
                      </svg>
                      <div
                        class="c9 c14 css-1urox24"
                      >
                        TVL
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        1 day volume
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        7 day volume
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        Turnover
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c0 c16"
            >
              <a
                class="c17"
                href="/explore/pools/ethereum/0x123"
              >
                <div
                  class="c3 c4 c5 c18"
                >
                  <div
                    class="c7"
                  >
                    <div
                      class="c8"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        1
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7"
                  >
                    <div
                      class="c10"
                    >
                      <div
                        class="c3 c19"
                      >
                        <div
                          class="c20"
                        >
                          <div
                            class="c21"
                            size="28"
                          >
                            <img
                              class="c22"
                              size="28"
                              src="blank_token.svg"
                            />
                            <img
                              class="c22"
                              size="28"
                              src="blank_token.svg"
                            />
                          </div>
                        </div>
                        <div
                          class="c23 c24 css-1urox24"
                        >
                          USDC/WETH
                        </div>
                        <div
                          class="c9 c25 css-1m65e73"
                        >
                          1%
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7"
                  >
                    <div
                      class="c11"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        $300.00
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7"
                  >
                    <div
                      class="c11"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        $400.00
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7"
                  >
                    <div
                      class="c11"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        $500.00
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7"
                  >
                    <div
                      class="c15"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        6%
                      </div>
                    </div>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="c3 c4 c26"
            >
              <div
                class="c3 c4 c27"
              >
                <svg
                  class="c28 c29"
                  fill="none"
                  stroke="#FC72FF"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2,12 a10,10 0 0,1 10,-10 M12,22 a10,10 0 0,1 -10,-10 M22,12 a10,10 0 0,1 -10,10"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                  />
                </svg>
                Loading
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TDPPoolTable renders error state 1`] = `
<DocumentFragment>
  .c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c24 {
  height: 16px;
  width: 16px;
}

.c24 path {
  stroke: #FC72FF;
  background: #7D7D7D;
  fill: none;
}

.c25 {
  -webkit-animation: 2s fvtopB linear infinite;
  animation: 2s fvtopB linear infinite;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c9 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c21 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 320px;
  padding: 12px;
  gap: 12px;
  background-color: #00000004;
  -webkit-backdrop-filter: blur(24px);
  backdrop-filter: blur(24px);
  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
  border: 1px #22222212 solid;
  border-radius: 20px;
}

.c1 {
  max-width: 1200px;
  max-height: 600px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px auto 24px auto;
}

.c2 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background: #FFFFFF;
}

.c16 {
  width: 100%;
  position: relative;
  overflow-x: auto;
  overscroll-behavior-x: none;
  border-right: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-left: 1px solid #22222212;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c16::-webkit-scrollbar {
  display: none;
}

.c22 {
  position: -webkit-sticky;
  position: sticky;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: -48px;
  visibility: hidden;
}

.c23 {
  background: #FFEFFF;
  border-radius: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 8px;
  color: #FC72FF;
  font-size: 16px;
  font-weight: 535;
  gap: 8px;
  height: 34px;
  z-index: 990;
}

.c5 {
  padding: 0px 12px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 64px;
}

.c17:hover {
  background: #22222212;
}

.c6 {
  border: 1px solid #22222212;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  overflow: auto;
  width: unset;
  min-height: 52px;
  background: #F9F9F9;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  overscroll-behavior: none;
  opacity: 0.4;
}

.c6::-webkit-scrollbar {
  display: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7:last-child {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7:first-child {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c12 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  width: 100%;
  gap: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c12:hover {
  opacity: 0.6;
}

.c12:active {
  opacity: 0.4;
}

.c13 {
  height: 16px;
  width: 16px;
  color: #222222;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c14 {
  color: #222222;
}

.c18 {
  border-radius: 12px;
  border-radius: 12px;
  height: 24px;
  width: 50%;
  width: 50%;
  -webkit-animation: fAQEyV 1.5s infinite;
  animation: fAQEyV 1.5s infinite;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  background: linear-gradient( to left, #22222212 25%, rgba(53,53,53,0.07) 50%, #22222212 75% );
  will-change: background-position;
  background-size: 400%;
}

.c8 {
  min-width: 44px;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c10 {
  width: 240px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c11 {
  min-width: 120px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c15 {
  min-width: 100px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c19 {
  width: 75%;
  height: 16px;
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        data-testid="tdp-pools-table-0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
      >
        <div>
          <div
            class="c0 c1"
          >
            <div
              class="c2"
            >
              <div
                class="c3 c4 c5 c6"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c9 css-1urox24"
                    >
                      #
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c9 css-1urox24"
                    >
                      Pool
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <svg
                        class="c13"
                        direction="desc"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="5"
                          y2="19"
                        />
                        <polyline
                          points="19 12 12 19 5 12"
                        />
                      </svg>
                      <div
                        class="c9 c14 css-1urox24"
                      >
                        TVL
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        1 day volume
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        7 day volume
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        Turnover
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c0 c16"
            >
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c20"
                data-testid="table-error-modal"
              >
                <div>
                  <svg
                    fill="none"
                    height="40"
                    viewBox="0 0 40 40"
                    width="40"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#fff"
                      fill-opacity=".12"
                      height="40"
                      rx="12"
                      width="40"
                    />
                    <path
                      clip-rule="evenodd"
                      d="m19.5833 27.5h.8334c.8333 0 1.25-.4167 1.25-1.25v-2.2203l-3.3326 2.2802c.0197.7934.4361 1.1901 1.2492 1.1901zm-1.25-8.4596v-5.2904c0-.8333.4167-1.25 1.25-1.25h.8334c.8333 0 1.25.4167 1.25 1.25v3.0097zm5.8334 3.2788 3.3333-2.2807v6.2115c0 .8333-.4167 1.25-1.25 1.25h-.8333c-.8334 0-1.25-.4167-1.25-1.25zm-8.3866-1.5318-3.2801 2.2443v-1.7817c0-.8333.4167-1.25 1.25-1.25h.8333c.6614 0 1.0603.2625 1.1968.7874zm-2.862 6.4904-.3496-.511c.0672.2197.1837.39.3496.511z"
                      fill="#9b9b9b"
                      fill-rule="evenodd"
                    />
                    <path
                      d="m12.5 26.6667 15.8333-10.8333"
                      stroke="#9b9b9b"
                      stroke-linecap="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c21 css-n8z49y"
                  >
                    Error loading data
                  </div>
                  <div
                    class="c9 css-142zc9n"
                  >
                    Data is unavailable at the moment; we're working on a fix
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c3 c4 c22"
            >
              <div
                class="c3 c4 c23"
              >
                <svg
                  class="c24 c25"
                  fill="none"
                  stroke="#FC72FF"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2,12 a10,10 0 0,1 10,-10 M12,22 a10,10 0 0,1 -10,-10 M22,12 a10,10 0 0,1 -10,10"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                  />
                </svg>
                Loading
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TDPPoolTable renders loading state 1`] = `
<DocumentFragment>
  .c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c22 {
  height: 16px;
  width: 16px;
}

.c22 path {
  stroke: #FC72FF;
  background: #7D7D7D;
  fill: none;
}

.c23 {
  -webkit-animation: 2s fvtopB linear infinite;
  animation: 2s fvtopB linear infinite;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c9 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c1 {
  max-width: 1200px;
  max-height: 600px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px auto 24px auto;
}

.c2 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background: #FFFFFF;
}

.c16 {
  width: 100%;
  position: relative;
  overflow-x: auto;
  overscroll-behavior-x: none;
  border-right: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-left: 1px solid #22222212;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c16::-webkit-scrollbar {
  display: none;
}

.c20 {
  position: -webkit-sticky;
  position: sticky;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: -48px;
  visibility: hidden;
}

.c21 {
  background: #FFEFFF;
  border-radius: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 8px;
  color: #FC72FF;
  font-size: 16px;
  font-weight: 535;
  gap: 8px;
  height: 34px;
  z-index: 990;
}

.c5 {
  padding: 0px 12px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 64px;
}

.c17:hover {
  background: #22222212;
}

.c6 {
  border: 1px solid #22222212;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  overflow: auto;
  width: unset;
  min-height: 52px;
  background: #F9F9F9;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  overscroll-behavior: none;
}

.c6::-webkit-scrollbar {
  display: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7:last-child {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7:first-child {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c12 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  width: 100%;
  gap: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c12:hover {
  opacity: 0.6;
}

.c12:active {
  opacity: 0.4;
}

.c13 {
  height: 16px;
  width: 16px;
  color: #222222;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c14 {
  color: #222222;
}

.c18 {
  border-radius: 12px;
  border-radius: 12px;
  height: 24px;
  width: 50%;
  width: 50%;
  -webkit-animation: fAQEyV 1.5s infinite;
  animation: fAQEyV 1.5s infinite;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  background: linear-gradient( to left, #22222212 25%, rgba(53,53,53,0.07) 50%, #22222212 75% );
  will-change: background-position;
  background-size: 400%;
}

.c8 {
  min-width: 44px;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c10 {
  width: 240px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c11 {
  min-width: 120px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c15 {
  min-width: 100px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c19 {
  width: 75%;
  height: 16px;
}

<span
    class="t_light is_inversed _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        data-testid="tdp-pools-table-0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
      >
        <div>
          <div
            class="c0 c1"
          >
            <div
              class="c2"
            >
              <div
                class="c3 c4 c5 c6"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c9 css-1urox24"
                    >
                      #
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c9 css-1urox24"
                    >
                      Pool
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <svg
                        class="c13"
                        direction="desc"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <line
                          x1="12"
                          x2="12"
                          y1="5"
                          y2="19"
                        />
                        <polyline
                          points="19 12 12 19 5 12"
                        />
                      </svg>
                      <div
                        class="c9 c14 css-1urox24"
                      >
                        TVL
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        1 day volume
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        7 day volume
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c3 c4 c12"
                    >
                      <div
                        class="c9 css-1urox24"
                      >
                        Turnover
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c0 c16"
            >
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c3 c4 c5 c17"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c10"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
                <div
                  class="c7"
                >
                  <div
                    class="c15"
                  >
                    <div
                      class="c18 c19"
                      data-testid="cell-loading-bubble"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c3 c4 c20"
            >
              <div
                class="c3 c4 c21"
              >
                <svg
                  class="c22 c23"
                  fill="none"
                  stroke="#FC72FF"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2,12 a10,10 0 0,1 10,-10 M12,22 a10,10 0 0,1 -10,-10 M22,12 a10,10 0 0,1 -10,10"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2.5"
                  />
                </svg>
                Loading
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;
